--- a/overdue-book-reporter.csproj
+++ b/overdue-book-reporter.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net7.0</TargetFramework>
-    <RootNamespace>overdue_book_reporter</RootNamespace>
+    <RootNamespace>Tiesmaster.OverdueBookReporter</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
