--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -37,6 +37,7 @@ jobs:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
           tags: |
             type=raw,value=latest,enable={{is_default_branch}}
+            type=raw,value=latest2,enable={{is_default_branch}}
       - name: Build and push Docker image
         id: build-and-push
         uses: docker/build-push-action@v4.1.1
