--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -25,10 +25,16 @@ jobs:
         run: dotnet build --no-restore
       - name: Test
         run: dotnet test --no-build --verbosity normal --logger trx --results-directory "TestResults"
-      - name: Upload dotnet test results
-        uses: actions/upload-artifact@v3
+      # - name: Upload dotnet test results
+      #   uses: actions/upload-artifact@v3
+      #   with:
+      #     name: dotnet-results
+      #     path: TestResults
+      #   if: always()
+      - name: Test Report
+        uses: dorny/test-reporter@v1
+        if: success() || failure()    # run this step even if previous step failed
         with:
-          name: dotnet-results
-          path: TestResults
-        # Use always() to always run this step to publish test results when there are test failures
-        if: ${{ always() }}
+          name: .NET Tests
+          path: TestResults/*.trx
+          reporter: dotnet-trx
