Update .env.sample with latest changes

--- a/.env.sample
+++ b/.env.sample
@@ -1,2 +1,15 @@
 LIBRARYLOGINCREDENTIALS__USERNAME=AzureDiamond
 LIBRARYLOGINCREDENTIALS__PASSWORD=hunter2
+
+# Mail settings
+EMAILSETTINGS__FROM__NAME=OverdueBookReporter
+EMAILSETTINGS__FROM__ADDRESS=john@gmail.com
+
+EMAILSETTINGS__TO__NAME=John
+EMAILSETTINGS__TO__ADDRESS=john@gmail.com
+
+EMAILSETTINGS__MAILSERVER__HOST=smtp.gmail.com
+EMAILSETTINGS__MAILSERVER__PORT=465
+EMAILSETTINGS__MAILSERVER__USESSL=true
+EMAILSETTINGS__MAILSERVER__USERNAME=john@gmail.com
+EMAILSETTINGS__MAILSERVER__PASSWORD=hunter2
