Add docker compose file for localhost dummy email server

--- a/.env.sample
+++ b/.env.sample
@@ -13,3 +13,10 @@ EMAILSETTINGS__MAILSERVER__PORT=465
 EMAILSETTINGS__MAILSERVER__USESSL=true
 EMAILSETTINGS__MAILSERVER__USERNAME=john@gmail.com
 EMAILSETTINGS__MAILSERVER__PASSWORD=hunter2
+
+# or just localhost (smtp4dev)
+EMAILSETTINGS__MAILSERVER__HOST=localhost
+EMAILSETTINGS__MAILSERVER__PORT=25
+EMAILSETTINGS__MAILSERVER__USESSL=false
+EMAILSETTINGS__MAILSERVER__USERNAME= 
+EMAILSETTINGS__MAILSERVER__PASSWORD= 
