--- a/src/OverdueBookReporter/appsettings.json
+++ b/src/OverdueBookReporter/appsettings.json
@@ -3,7 +3,7 @@
     "LogLevel": {
       "Default": "Information",
       "Microsoft.Hosting.Lifetime": "Information",
-      "OverdueBookReporter.MainUseCase": "Debug"
+      "OverdueBookReporter": "Debug"
     }
   }
 }
