--- a/tests/OverdueBookReporter.UnitTests/OverdueBookReporter.UnitTests.csproj
+++ b/tests/OverdueBookReporter.UnitTests/OverdueBookReporter.UnitTests.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
+    <RootNamespace>Tiesmaster.OverdueBookReporter.UnitTests</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
 
