--- a/src/OverdueBookReporter/OverdueBookReporter.csproj
+++ b/src/OverdueBookReporter/OverdueBookReporter.csproj
@@ -11,6 +11,7 @@
   <ItemGroup>
     <PackageReference Include="AngleSharp" Version="1.0.1" />
     <PackageReference Include="dotenv.net" Version="3.1.2" />
+    <PackageReference Include="FluentResults" Version="3.15.2" />
     <PackageReference Include="Humanizer" Version="2.14.1" />
     <PackageReference Include="MailKit" Version="4.0.0" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="7.0.1" />
