--- a/src/OverdueBookReporter/OverdueBookReporter.csproj
+++ b/src/OverdueBookReporter/OverdueBookReporter.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <PackageReference Include="AngleSharp" Version="1.0.1" />
+    <PackageReference Include="ConsoleTableExt" Version="3.2.0" />
     <PackageReference Include="dotenv.net" Version="3.1.2" />
     <PackageReference Include="FluentResults" Version="3.15.2" />
     <PackageReference Include="Humanizer" Version="2.14.1" />
