Document on how to increase logging, when needed

--- a/.env.sample
+++ b/.env.sample
@@ -20,3 +20,6 @@ EMAILSETTINGS__MAILSERVER__PORT=25
 EMAILSETTINGS__MAILSERVER__USESSL=false
 EMAILSETTINGS__MAILSERVER__USERNAME= 
 EMAILSETTINGS__MAILSERVER__PASSWORD= 
+
+# Enable outgoing HTTP requests logging middleware
+# Logging__LogLevel__System.Net.Http.HttpClient.LibraryRotterdamClient=Trace
