Configure logging a bit

--- a/src/OverdueBookReporter/appsettings.json
+++ b/src/OverdueBookReporter/appsettings.json
@@ -4,6 +4,13 @@
       "Default": "Information",
       "Microsoft.Hosting.Lifetime": "Information",
       "Tiesmaster.OverdueBookReporter": "Debug"
+    },
+    "Console": {
+        "FormatterName": "simple",
+        "FormatterOptions": {
+            "TimestampFormat": "HH:mm:ss ",
+            "UseUtcTimestamp": true
+        }
     }
   }
 }
