--- a/charts/overdue-book-reporter/templates/configmap.yaml
+++ b/charts/overdue-book-reporter/templates/configmap.yaml
@@ -2,15 +2,17 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: {{ include "ping_exporter.fullname" . }}
+{{- with .Values.config }}
 data:
-  LIBRARYLOGINCREDENTIALS__USERNAME: {{ .Values.libraryLoginCredentials.username | quote }}
-  LIBRARYLOGINCREDENTIALS__PASSWORD: {{ .Values.libraryLoginCredentials.password | quote }}
-  EMAILSETTINGS__FROM__NAME: {{ .Values.emailSettings.from.name | quote }}
-  EMAILSETTINGS__FROM__ADDRESS: {{ .Values.emailSettings.from.address | quote }}
-  EMAILSETTINGS__TO__NAME: {{ .Values.emailSettings.to.name | quote }}
-  EMAILSETTINGS__TO__ADDRESS: {{ .Values.emailSettings.to.address | quote }}
-  EMAILSETTINGS__MAILSERVER__HOST: {{ .Values.emailSettings.mailServer.host | quote }}
-  EMAILSETTINGS__MAILSERVER__PORT: {{ .Values.emailSettings.mailServer.port | quote }}
-  EMAILSETTINGS__MAILSERVER__USESSL: {{ .Values.emailSettings.mailServer.useSsl | quote }}
-  EMAILSETTINGS__MAILSERVER__USERNAME: {{ .Values.emailSettings.mailServer.username | quote }}
-  EMAILSETTINGS__MAILSERVER__PASSWORD: {{ .Values.emailSettings.mailServer.password | quote }}
+  LIBRARYLOGINCREDENTIALS__USERNAME: {{ .libraryLoginCredentials.username | quote }}
+  LIBRARYLOGINCREDENTIALS__PASSWORD: {{ .libraryLoginCredentials.password | quote }}
+  EMAILSETTINGS__FROM__NAME: {{ .emailSettings.from.name | quote }}
+  EMAILSETTINGS__FROM__ADDRESS: {{ .emailSettings.from.address | quote }}
+  EMAILSETTINGS__TO__NAME: {{ .emailSettings.to.name | quote }}
+  EMAILSETTINGS__TO__ADDRESS: {{ .emailSettings.to.address | quote }}
+  EMAILSETTINGS__MAILSERVER__HOST: {{ .emailSettings.mailServer.host | quote }}
+  EMAILSETTINGS__MAILSERVER__PORT: {{ .emailSettings.mailServer.port | quote }}
+  EMAILSETTINGS__MAILSERVER__USESSL: {{ .emailSettings.mailServer.useSsl | quote }}
+  EMAILSETTINGS__MAILSERVER__USERNAME: {{ .emailSettings.mailServer.username | quote }}
+  EMAILSETTINGS__MAILSERVER__PASSWORD: {{ .emailSettings.mailServer.password | quote }}
+{{- end }}
