--- a/charts/overdue-book-reporter/templates/secret.yaml
+++ b/charts/overdue-book-reporter/templates/secret.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: {{ include "ping_exporter.fullname" . }}
+  name: {{ include "overdue-book-reporter.fullname" . }}
 {{- with .Values.config }}
 data:
   LIBRARYLOGINCREDENTIALS__PASSWORD: {{ .libraryLoginCredentials.password | quote }}
