--- a/charts/overdue-book-reporter/templates/configmap.yaml
+++ b/charts/overdue-book-reporter/templates/configmap.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: {{ include "ping_exporter.fullname" . }}
+  name: {{ include "overdue-book-reporter.fullname" . }}
 {{- with .Values.config }}
 data:
   LIBRARYLOGINCREDENTIALS__USERNAME: {{ .libraryLoginCredentials.username | quote }}
