--- a/charts/overdue-book-reporter/values.yaml
+++ b/charts/overdue-book-reporter/values.yaml
@@ -7,6 +7,9 @@ image:
 nameOverride: ""
 fullnameOverride: ""
 
+podAnnotations: {}
+podLabels: {}
+
 # The config block contains the configuration of the application. See
 # [.env.sample](https://github.com/tiesmaster/overdue-book-reporter/blob/main/.env.sample)
 # for all supported configuration settings.
