--- a/charts/overdue-book-reporter/values.yaml
+++ b/charts/overdue-book-reporter/values.yaml
@@ -10,6 +10,11 @@ fullnameOverride: ""
 podAnnotations: {}
 podLabels: {}
 
+cronSpec:
+  schedule: "0 1 * * *"
+  # successfulJobsHistoryLimit: 7
+  # failedJobsHistoryLimit: 30
+
 # The config block contains the configuration of the application. See
 # [.env.sample](https://github.com/tiesmaster/overdue-book-reporter/blob/main/.env.sample)
 # for all supported configuration settings.
