Fix bug in helm chart Secret

--- a/charts/overdue-book-reporter/templates/secret.yaml
+++ b/charts/overdue-book-reporter/templates/secret.yaml
@@ -3,7 +3,7 @@ kind: Secret
 metadata:
   name: {{ include "overdue-book-reporter.fullname" . }}
 {{- with .Values.config }}
-data:
+stringData:
   LIBRARYLOGINCREDENTIALS__PASSWORD: {{ .libraryLoginCredentials.password | quote }}
   EMAILSETTINGS__MAILSERVER__PASSWORD: {{ .emailSettings.mailServer.password | quote }}
 {{- end }}
