--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -20,6 +20,8 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
+      - name: Check line endings BooksStatusReportToEmailTests failed
+        run: file tests/OverdueBookReporter.UnitTests/BooksStatusReportToEmailTests.cs
       - name: Setup .NET
         uses: actions/setup-dotnet@v3
         with:
