Rename library login credentials -> library rotterdam client options

--- a/charts/overdue-book-reporter/templates/secret.yaml
+++ b/charts/overdue-book-reporter/templates/secret.yaml
@@ -4,6 +4,6 @@ metadata:
   name: {{ include "overdue-book-reporter.fullname" . }}
 {{- with .Values.config }}
 stringData:
-  LIBRARYLOGINCREDENTIALS__PASSWORD: {{ .libraryLoginCredentials.password | quote }}
+  LIBRARYROTTERDAMCLIENT__PASSWORD: {{ .libraryRotterdamClient.password | quote }}
   EMAILSETTINGS__MAILSERVER__PASSWORD: {{ .emailSettings.mailServer.password | quote }}
 {{- end }}
