Nest credentials for library rotterdam client under .Login

--- a/charts/overdue-book-reporter/templates/secret.yaml
+++ b/charts/overdue-book-reporter/templates/secret.yaml
@@ -4,6 +4,6 @@ metadata:
   name: {{ include "overdue-book-reporter.fullname" . }}
 {{- with .Values.config }}
 stringData:
-  LIBRARYROTTERDAMCLIENT__PASSWORD: {{ .libraryRotterdamClient.password | quote }}
+  LIBRARYROTTERDAMCLIENT__LOGIN__PASSWORD: {{ .libraryRotterdamClient.login.password | quote }}
   EMAILSETTINGS__MAILSERVER__PASSWORD: {{ .emailSettings.mailServer.password | quote }}
 {{- end }}
