--- a/charts/overdue-book-reporter/values.yaml
+++ b/charts/overdue-book-reporter/values.yaml
@@ -9,8 +9,9 @@ cronSpec:
 
 config:
   libraryRotterdamClient: {}
-    # username: AzureDiamond
-    # password: hunter2
+    # login:
+    #   username: AzureDiamond
+    #   password: hunter2
 
   emailSettings:
     from: {}
