Allow to configure the User-Agent header for the library rotterdam client

--- a/.env.sample
+++ b/.env.sample
@@ -1,6 +1,8 @@
 LIBRARYROTTERDAMCLIENT__LOGIN__USERNAME=AzureDiamond
 LIBRARYROTTERDAMCLIENT__LOGIN__PASSWORD=hunter2
 
+LIBRARYROTTERDAMCLIENT__USERAGENT='Mozilla/5.0 (Windows NT 6.1; Win64; x64; rv:47.0) Gecko/20100101 Firefox/47.0'
+
 # Mail settings
 EMAILSETTINGS__FROM__NAME=OverdueBookReporter
 EMAILSETTINGS__FROM__ADDRESS=john@gmail.com
