Wire up the user-agent into the helm chart

--- a/charts/overdue-book-reporter/templates/configmap.yaml
+++ b/charts/overdue-book-reporter/templates/configmap.yaml
@@ -4,6 +4,7 @@ metadata:
   name: {{ include "overdue-book-reporter.fullname" . }}
 {{- with .Values.config }}
 data:
+  LIBRARYROTTERDAMCLIENT__USERAGENT: {{ .libraryRotterdamClient.userAgent | quote }}
   LIBRARYROTTERDAMCLIENT__LOGIN__USERNAME: {{ .libraryRotterdamClient.login.username | quote }}
   EMAILSETTINGS__FROM__NAME: {{ .emailSettings.from.name | quote }}
   EMAILSETTINGS__FROM__ADDRESS: {{ .emailSettings.from.address | quote }}
