--- a/charts/overdue-book-reporter/values.yaml
+++ b/charts/overdue-book-reporter/values.yaml
@@ -9,6 +9,7 @@ cronSpec:
 
 config:
   libraryRotterdamClient: {}
+    # userAgent: Mozilla/5.0 (Windows NT 6.1; Win64; x64; rv:47.0) Gecko/20100101 Firefox/47.0
     # login:
     #   username: AzureDiamond
     #   password: hunter2
