Fix bug: crashing on empty user-agent config value
Also fix this upstream in the helm chart.

--- a/charts/overdue-book-reporter/templates/configmap.yaml
+++ b/charts/overdue-book-reporter/templates/configmap.yaml
@@ -4,7 +4,9 @@ metadata:
   name: {{ include "overdue-book-reporter.fullname" . }}
 {{- with .Values.config }}
 data:
-  LIBRARYROTTERDAMCLIENT__USERAGENT: {{ .libraryRotterdamClient.userAgent | quote }}
+  {{- with .libraryRotterdamClient.userAgent }}
+  LIBRARYROTTERDAMCLIENT__USERAGENT: {{ . | quote }}
+  {{- end }}
   LIBRARYROTTERDAMCLIENT__LOGIN__USERNAME: {{ .libraryRotterdamClient.login.username | quote }}
   EMAILSETTINGS__FROM__NAME: {{ .emailSettings.from.name | quote }}
   EMAILSETTINGS__FROM__ADDRESS: {{ .emailSettings.from.address | quote }}
