--- a/src/OverdueBookReporter/OverdueBookReporter.csproj
+++ b/src/OverdueBookReporter/OverdueBookReporter.csproj
@@ -14,6 +14,7 @@
     <PackageReference Include="dotenv.net" Version="3.1.2" />
     <PackageReference Include="FluentResults" Version="3.15.2" />
     <PackageReference Include="Humanizer" Version="2.14.1" />
+    <PackageReference Include="IdentityModel" Version="7.0.0" />
     <PackageReference Include="MailKit" Version="4.0.0" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="7.0.1" />
     <PackageReference Include="Microsoft.Extensions.Http" Version="7.0.0" />
