Add Jaeger ingestion

--- a/compose.yaml
+++ b/compose.yaml
@@ -4,3 +4,16 @@ services:
     ports:
       - "2525:80"
       - "25:25"
+  otel-collector:
+    image: otel/opentelemetry-collector
+    command: ["--config=/etc/otel-collector-config.yaml"]
+    volumes:
+      - ./infra/otel-collector-config.yaml:/etc/otel-collector-config.yaml
+    ports:
+      - "4317:4317"
+  jaeger:
+    image: jaegertracing/all-in-one:latest
+    ports:
+      - "16686:16686"
+      - "14268"
+      - "14250"
