chore: Switch over to using direnv (using .envrc)

--- a/.gitignore
+++ b/.gitignore
@@ -517,4 +517,4 @@ FodyWeavers.xsd
 # End of https://www.toptal.com/developers/gitignore/api/visualstudio,visualstudiocode,vim,rider
 
 # Local files
-.env
+.envrc
